RESOLVED FIXED189423
[AX] Fix compile error in AXObjectCache constructor when !HAVE(ACCESSIBILITY)
https://bugs.webkit.org/show_bug.cgi?id=189423
Summary [AX] Fix compile error in AXObjectCache constructor when !HAVE(ACCESSIBILITY)
Don Olmstead
Reported 2018-09-07 11:35:06 PDT
AXObjectCache::AXObjectCache(Document& document) does not compile when accessibility is turned off
Attachments
Patch (2.53 KB, patch)
2018-09-07 11:37 PDT, Don Olmstead
no flags
Radar WebKit Bug Importer
Comment 1 2018-09-07 11:35:24 PDT
Don Olmstead
Comment 2 2018-09-07 11:37:21 PDT
Created attachment 349168 [details] Patch There was just a copy paste error with the initializers
Yusuke Suzuki
Comment 3 2018-09-07 11:38:56 PDT
Comment on attachment 349168 [details] Patch r=me
WebKit Commit Bot
Comment 4 2018-09-07 13:44:46 PDT
Comment on attachment 349168 [details] Patch Clearing flags on attachment: 349168 Committed r235804: <https://trac.webkit.org/changeset/235804>
WebKit Commit Bot
Comment 5 2018-09-07 13:44:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.