[AX] Fix compile error in AXObjectCache constructor when !HAVE(ACCESSIBILITY) https://bugs.webkit.org/show_bug.cgi?id=189423 <rdar://problem/44231775>

Reviewed by Yusuke Suzuki.

No new tests. Compilation fix.

* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::AXObjectCache):


Canonical link: https://commits.webkit.org/204394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235804 268f45cc-cd09-0410-ab3c-d52691b4dbfc